# shortka

./: .gitignore  CHECK.md  README.md  pyproject.toml
app/: main.py
app/api/: basic.py
app/core/: config.py  providers.py
app/core/settings/: app.py  production.py  test.py
app/services/: database.py  migrations.py  uow.py  url_service.py  url_shortener.py
tests/: conftest.py  test_api.py
