[project]
name = "shortka"
version = "0.1.0"
description = "Shortify url's"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dishka>=1.7.2",
    "fastapi[standard]>=0.128.5",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--strict-markers --tb=short"